Minor change in pipelining

--- a/Pipelining and Grid Search.ipynb
+++ b/Pipelining and Grid Search.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipelining in machine learning\n",
+    "\n",
+    "<img src='download.png' height=\"1000\" width=\"1000\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
